--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -12,6 +12,7 @@
         @include centered-elements;
         flex-direction: column;
         width: 100%;
+        height: 4rem;
         color: $header-font-color;
         text-transform: capitalize;
         margin-bottom: 2.6rem;
