--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -12,5 +12,6 @@
         border: 1px solid $border-color;
         border-radius: 25px;
         outline: none;
+        padding-left: 1rem;
     }
 }
